 - GBA Video: Fix mosaic objects drawing past the end (fixes mgba.io/i/1702)
 - GBA Video: Fix disabling OBJWIN in GL renderer (fixes mgba.io/i/1759)
 - GBA Video: Add missing parts of 256-color mode 0 mosaic (fixes mgba.io/i/1701)
 - GBA Video: Fix double-size OBJ wrapping in GL renderer (fixes mgba.io/i/1712)
 - GBA Video: Simplify sprite cycle counting (fixes mgba.io/i/1279)
Other fixes:
 - ARM: Fix disassembling of several S-type instructions (fixes mgba.io/i/1778)
 - ARM Debugger: Clear low bit on breakpoint addresses (fixes mgba.io/i/1764)
 - CMake: Always use devkitPro toolchain when applicable (fixes mgba.io/i/1755)
 - Core: Fix ELF loading regression (fixes mgba.io/i/1669)
 - Core: Fix crash modifying hash table entry (fixes mgba.io/i/1673)
 - GB Video: Fix some cases where SGB border doesn't draw to mutli-buffers
 - GBA: Reject incorrectly sized BIOSes
 - GBA: Break infinite loop for 0-frame mVLs (fixes mgba.io/i/1723)
 - Qt: Fix OpenGL 2.1 support (fixes mgba.io/i/1678)
 - Qt: Fix unmapping zipped ROM (fixes mgba.io/i/1777)
Misc:
 - 3DS: Clean up legacy initialization (fixes mgba.io/i/1768)
 - GBA Serialize: Only flunk BIOS check if official BIOS was expected
 - Qt: Disable Replace ROM option when no game loaded
 - Qt: Defer texture updates until frame is drawn (fixes mgba.io/i/1590)
 - Qt: Set icon for Discord Rich Presence
 - Qt: Show a warning when save file can't be opened

0.8.1: (2020-02-16)
Emulation fixes:
 - GB Serialize: Fix timing bug loading channel 4 timing
 - GBA: Fix multiboot entry point while skipping BIOS
 - GBA BIOS: Fix undefined instruction HLE behavior
 - GBA DMA: Fix invalid audio DMA parameters
 - GBA Memory: Misaligned SRAM writes are ignored
 - GBA Serialize: Fix serializing DMA transfer register
 - GBA Serialize: Fix audio DMA timing deserialization
 - GBA Video: Fix OAM not invalidating after reset (fixes mgba.io/i/1630)
 - GBA Video: Fix backdrop blending on lines without sprites (fixes mgba.io/i/1647)